prevent "jumping" because of scrollBar appear/disappear

--- a/css/tabspane.scss
+++ b/css/tabspane.scss
@@ -3,6 +3,7 @@
 body {
   margin: 0;
   background: #c5c5c5 url("../img/bg.jpg") ;
+  overflow-x: hidden;
 }
 
 #tabsSearch {
